--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,10 @@
-Flask==3.1.1 Flask-SQLAlchemy==3.1.1 PyMySQL==1.1.1 python-dotenv==1.1.0 bcrypt==4.3.0 PyJWT==2.10.1 Pillow==10.3.0
+Flask==2.3.2
+flask-cors==4.0.0
+Flask-JWT-Extended==4.6.0
+Flask-SQLAlchemy==3.1.1
+python-dotenv==1.0.1
+boto3==1.34.81
+PyJWT==2.8.0
+Werkzeug==2.3.7
+
 
